--- a/estilos.css
+++ b/estilos.css
@@ -166,7 +166,7 @@ p:after {
     text-align: center;
     font-size: 50pt;
     color: #fff;
-    background: linear-gradient(110deg, #f4dfd5 33%, rgba(0, 0, 0, 0) 33%), linear-gradient(110deg, #edccd8 34%, #c49bd2 34%);
+    background: linear-gradient(110deg, #a0b395 33%, rgba(0, 0, 0, 0) 33%), linear-gradient(110deg, #7cc3b3 34%, #df665d 34%);
     background-size: 400%;
     -webkit-text-fill-color: transparent;
     -webkit-background-clip: text;
