--- a/estilos.css
+++ b/estilos.css
@@ -18,7 +18,8 @@ body {
 .descripcion {
     text-shadow: 2px 2px #b8b1b0;
     color: #000;
-    margin: 50px;
+    margin: 60px;
+    z-index: 20!important;
 }
 
 .cuadro_descripcion {
@@ -32,6 +33,8 @@ body {
     background-color: beige;
     z-index: 1;
     box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+    text-align: justify;
+    text-justify: inter-word;
 }
 
 a {
@@ -41,6 +44,7 @@ a {
     background-size: 3px 3px;
     color: #000;
     text-decoration: none;
+    font-style: italic;
 }
 
 a:hover {
@@ -66,8 +70,8 @@ img {
 
 .imagen3 {
     position: absolute;
-    top: 60px;
-    left: 1320px;
+    top: 200px;
+    left: 1360px;
     z-index: 9;
 }
 
@@ -166,10 +170,11 @@ p:after {
     text-align: center;
     font-size: 50pt;
     color: #fff;
-    background: linear-gradient(110deg, #a0b395 33%, rgba(0, 0, 0, 0) 33%), linear-gradient(110deg, #7cc3b3 34%, #df665d 34%);
+    background: linear-gradient(110deg, #406454 33%, rgba(0, 0, 0, 0) 33%), linear-gradient(110deg, #7cc3b3 34%, #645c64 34%);
     background-size: 400%;
     -webkit-text-fill-color: transparent;
     -webkit-background-clip: text;
+
 }
 
 .tittle {
