--- a/estilos.css
+++ b/estilos.css
@@ -25,9 +25,9 @@ body {
     border: solid #000;
     z-index: 10;
     position: absolute;
-    margin-top: 130px;
-    margin-left: 300px;
-    margin-right: 300px;
+    margin-top: 9%;
+    margin-left: 15%;
+    margin-right: 15%;
     font-size: 28px;
     background-color: beige;
     z-index: 1;
