--- a/estilos2.css
+++ b/estilos2.css
@@ -49,6 +49,16 @@ body {
     border: #000 solid 2px;
 }
 
+.presentacionesh {
+    display: flex;
+    align-content: center;
+    justify-content: center;
+    background-color: yellow;
+    margin-bottom: 40px;
+    border: #000 solid 2px;
+    transform: rotate(2deg);
+}
+
 .text_shadows {
     text-shadow: 3px 3px 0 var(--color-secondary), 6px 6px 0 var(--color-tertiary),
         9px 9px var(--color-quaternary), 12px 12px 0 var(--color-quinary);
@@ -159,6 +169,7 @@ tr:hover {
 #me {
     border-radius: 50%;
     border: #000 solid;
+    width: 400px;
 }
 
 .bubble {
@@ -220,6 +231,16 @@ td {
     gap: 30PX;
     font: 1.4em "Press start 2P";
     color: #FFF;
+    padding-bottom: 200px;
+}
+.contenedor-presentaciones {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 200px;
+    gap: 30PX;
+    font: 1.4em "Press start 2P";
+    color: #000;
     padding-bottom: 200px;
 }
 
